# vote-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py  views.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_choice_question.py
polls/templates/polls/: detail.html  index.html  results.html
