[tool.poetry]
name = "vote-app"
version = "0.1.0"
description = ""
authors = ["Arist0craft <dimnktn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
psycopg2 = "^2.9.1"
django-environ = "^0.8.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
coverage = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
